# paperang-miaomiaoji-tool-gen2

./: .gitignore  LICENSE  README.md  SKILL.md  cli.py  config.py  image_process.py  message_process.py  pyproject.toml  requirements.txt  喵喵机.bat
paperang/: __init__.py  __main__.py  bt.py  cli.py  config.py  image.py  interactive.py  text.py
scripts/: connect.sh  gui.py  print_fun.py  喵喵机.bat
