[project]
name = "paperang"
version = "2.0.0"
description = "Paperang 2 (喵喵机2) Bluetooth thermal printer CLI tool"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "createskyblue" },
]
keywords = ["paperang", "bluetooth", "printer", "thermal-printer"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

dependencies = [
    "pyserial>=3.5",
    "numpy>=1.24",
    "Pillow>=10.0",
    "qrcode>=7.4",
]

[project.scripts]
paperang = "paperang.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
